# pyscript-coding-challenge

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  astro.config.mjs  bs-config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pyscript.pyi
.github/workflows/: deploy.yml
public/: challenge.py  editor.js  index.html  main.py  mini-coi.min.js  pyscript.json  style.css  worker.py
src/: env.d.ts
src/content/: challengeDescription.md
src/pages/: index.astro
src/scripts/: mini-coi.js
srcastro/: env.d.ts
srcastro/content/: challengeDescription.md
srcastro/pages/: index.astro
srcpy/: main.py  worker.py
