[project]
name = "pyscript-coding-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.2"
dependencies = ["python-minifier>=3.1.1"]

[dependency-groups]
dev = ["mypy>=1.19.1", "pre-commit>=4.5.0", "ruff>=0.14.9"]

[tool.ruff]
line-length = 80
exclude = [
    ".astro",
    ".git",
    ".github",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "dist",
    "node_modules",
    "public",
    "srcastro",
]
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ANN", # annotations :)
    "D",   # code documentation :)
]
ignore = ["F403", "F405"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
files = ["srcpy"]
mypy_path = "."
exclude = [
    '(^|.*/)__pycache__/', # matches __pycache__ at any depth
    '(^|.*/).ruff_cache/',
    '(^|.*/).mypy_cache/',
    '(^|.*/)dist/',
    '(^|.*/)public/',
    '(^|.*/).venv/',
]

ignore_missing_imports = true

warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
